# cookbook-api

./: .gitignore  Procfile  manage.py  pyproject.toml  requirements.txt
cookbook_api/: asgi.py  settings.py  urls.py  wsgi.py
cookbook_api/api/: admin.py  apps.py  models.py  serializers.py  views.py
cookbook_api/api/migrations/: 0001_initial.py  0002_recipe_tag_delete_item_recipe_tags.py  0003_recipe_author_recipe_created_on_recipe_instructions.py
heroku_rest_api/: asgi.py  settings.py  urls.py  wsgi.py
heroku_rest_api/api/: admin.py  apps.py  views.py
heroku_rest_api/api/migrations/: 0001_initial.py
templates/rest_framework/: api.html
