[tool.poetry]
name = "heroku-rest-api"
version = "0.1.0"
description = ""
authors = ["Tomasz Wrona <tomasz@wrona.me>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"
python-dotenv = "^0.20.0"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
